--- a/main.html
+++ b/main.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<meta charset="UTF-8">
-	<title>Get And Style All Tags</title>
-	<link rel="stylesheet" href="styles.css">
+  <title>Highlight Bold Words</title>
+  <script src="script.js" defer></script>
+  <style>
+    .highlight {
+      color: green;
+    }
+  </style>
 </head>
-
 <body>
-  	<p>[<a href="#" onMouseOver="highlight()" onMouseOut="return_normal()">On mouse over here bold words of the following paragraph will be highlighted</a>]</p> 
-	<p><strong>AccioJob</strong> is an <strong>ed-tech startup</strong> run by IIT Delhi Alumni that provides a comprehensive state-of-the-art learning platform for <strong>Full Stack Web Development</strong>. Our industry-relevant curriculum is taught by top tech instructors and mentors, and our students have gone on to work at leading tech companies like <strong>Amazon</strong>, <strong>Salesforce</strong>, and <strong>Walmart</strong>, among others. With job placement opportunities at <strong>300+</strong> top tech partner companies, we have placed <strong>1000+</strong> students in 2022 itself at an average salary of <strong>8.3 LPA</strong></p>
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <a href="#" id="highlightLink">Hover over this link to highlight bold words</a>
+  <p id="paragraph">
+    This is a <strong>sample</strong> paragraph with <strong>bold</strong> words.
+  </p>
 </body>
-
 </html>
